--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.2.1",
     "typescript": "^4.6.0",
