--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@types/react-dom": "^18.0.2",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.1.3",
+    "connected-react-router": "^6.9.3",
+    "history": "4.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "redux-first-history": "^5.1.1",
     "redux-saga": "^1.2.1",
     "typescript": "^4.6.0",
     "web-vitals": "^2.1.0"
